--- a/client/index.html
+++ b/client/index.html
@@ -1,224 +1,134 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Employee Policy System</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { margin: 0; font-family: 'Segoe UI', Arial, sans-serif; background: linear-gradient(135deg, #667eea, #764ba2); display: flex; justify-content: center; align-items: center; height: 100vh; }
-    .container { background: white; padding: 40px; border-radius: 15px; width: 350px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); text-align: center; position: relative; }
-    h2 { color: #333; margin-bottom: 20px; }
-    input { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ccc; box-sizing: border-box; outline: none; }
-    input:focus { border-color: #667eea; }
-    button { width: 100%; padding: 12px; border: none; border-radius: 8px; background: #667eea; color: white; font-weight: bold; cursor: pointer; margin-top: 10px; transition: 0.3s; }
-    button:hover { background: #5a67d8; }
-    button:disabled { background: #cbd5e0; cursor: not-allowed; }
-    .toggle-btn { background: transparent; color: #667eea; margin-top: 15px; font-size: 14px; border: none; cursor: pointer; text-decoration: underline; }
-    .hidden { display: none; }
+const express = require("express");
+const router = express.Router();
+const User = require("../models/User");
+const axios = require("axios");
+const jwt = require("jsonwebtoken");
+
+const sanitizePhone = (phone) => {
+  const cleaned = phone.replace(/\D/g, "");
+  return cleaned.length > 10 ? cleaned.slice(-10) : cleaned;
+};
+
+// =========================
+// 🔹 SEND OTP (Using Offer Template 13273)
+// =========================
+router.post("/send-otp", async (req, res) => {
+  try {
+    let { phone } = req.body;
+    if (!phone) return res.status(400).json({ message: "Phone required" });
+
+    const cleanPhone = sanitizePhone(phone);
+    const user = await User.findOne({ phone: cleanPhone }).select("+otpCount +otpLastSentDate");
     
-    #timerContainer { 
-      background: #f7fafc; 
-      padding: 8px; 
-      border-radius: 8px; 
-      margin: 10px 0; 
-      display: none;
+    if (!user) {
+      return res.status(404).json({ message: "Employee not found in database" });
     }
-    #timerText { color: #4a5568; font-size: 14px; font-weight: bold; margin: 0; }
-    #seconds { color: #e53e3e; }
 
-    .logo-header {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      background: white;
-      padding: 10px 15px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    // Rate Limiting
+    const today = new Date().toDateString();
+    if (user.otpLastSentDate && new Date(user.otpLastSentDate).toDateString() !== today) {
+      user.otpCount = 0;
     }
-    .logo-header svg { width: 140px; height: auto; }
-
-    @media (max-width: 600px) {
-        .logo-header { top: 10px; left: 10px; padding: 8px 12px; }
-        .logo-header svg { width: 110px; }
+    if (user.otpCount >= 10) {
+      return res.status(429).json({ message: "Daily OTP limit reached" });
     }
-  </style>
-</head>
-<body>
 
-<div class="logo-header">
-    <svg width="180" height="37" viewBox="0 0 180 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g>
-            <path d="M0 15.2309V0.626219C0 0.275961 0.275278 0 0.624669 0H8.036C10.8841 0 13.1922 2.31383 13.1922 5.16896V15.2309C13.1922 15.5812 12.9169 15.8571 12.5675 15.8571H0.624669C0.275278 15.8571 0 15.5812 0 15.2309Z" fill="#B71530"/>
-            <path d="M0 21.7693V36.374C0 36.7242 0.275278 37.0002 0.624669 37.0002H8.036C10.8841 37.0002 13.1922 34.6864 13.1922 31.8312V21.7693C13.1922 21.419 12.9169 21.1431 12.5675 21.1431H0.624669C0.275278 21.1431 0 21.419 0 21.7693Z" fill="#B71530"/>
-            <path d="M31.7097 15.2309V0.626219C31.7097 0.275961 31.4345 0 31.0851 0H23.6737C20.8257 0 18.5176 2.31383 18.5176 5.16896V15.2309C18.5176 15.5812 18.7929 15.8571 19.1422 15.8571H31.0851C31.4345 15.8571 31.7097 15.5812 31.7097 15.2309Z" fill="#B71530"/>
-            <path d="M31.7097 21.7693V36.374C31.7097 36.7242 31.4345 37.0002 31.0851 37.0002H23.6737C20.8257 37.0002 18.5176 34.6864 18.5176 31.8312V21.7693Z" fill="#B71530"/>
-            <path d="M48.1734 30.8544H44.1289V6.1665H48.1734V16.6424H58.1575V6.1665H62.202V30.8438H58.1575V20.3042H48.1734V30.8438V30.8544Z" fill="#022D5B"/>
-            <path d="M67.8342 11.1762C67.1037 11.1762 66.4896 10.9427 65.992 10.4757C65.4838 10.0087 65.2402 9.38244 65.2402 8.60762C65.2402 7.83281 65.4943 7.20659 65.992 6.73958C66.5002 6.27257 67.1142 6.03906 67.8342 6.03906C68.5542 6.03906 69.2106 6.27257 69.6976 6.73958C70.1952 7.20659 70.4388 7.83281 70.4388 8.60762C70.4388 9.38244 70.1952 10.0087 69.6976 10.4757C69.2 10.9427 68.5859 11.1762 67.8342 11.1762ZM69.7717 30.8543H65.9073V13.4369H69.7717V30.8543Z" fill="#022D5B"/>
-            <path d="M77.469 30.8543H73.6045V13.437H77.4054V15.9737H77.9984C78.3054 15.2732 78.8665 14.6257 79.6818 14.0313C80.497 13.4476 81.7358 13.1504 83.3769 13.1504C84.7109 13.1504 85.8967 13.4476 86.9131 14.0526C87.9295 14.6469 88.7342 15.4961 89.3059 16.5787C89.8777 17.6613 90.1635 18.9456 90.1635 20.4209V30.8543H86.299V20.7393C86.299 19.2852 85.9391 18.2026 85.2297 17.4915C84.5097 16.791 83.5145 16.4301 82.2228 16.4301C80.7723 16.4301 79.6183 16.9183 78.7607 17.8948C77.9031 18.8713 77.4796 20.2511 77.4796 22.0342V30.8437L77.469 30.8543Z" fill="#022D5B"/>
-            <path d="M100.963 31.3426C99.534 31.3426 98.2106 30.9924 97.0036 30.3025C95.7966 29.6126 94.8226 28.5936 94.0814 27.2563C93.3403 25.9189 92.9697 24.3056 92.9697 22.427V21.8963C92.9697 20.0176 93.3297 18.4043 94.0602 17.067C94.7908 15.7296 95.7649 14.7001 96.9824 13.9995C98.2 13.299 99.5235 12.9382 100.953 12.9382C102.054 12.9382 102.986 13.0761 103.727 13.3415C104.478 13.6068 105.093 13.9571 105.569 14.3816C106.045 14.8062 106.405 15.2414 106.638 15.6872H107.242V6.1665H111.106V30.8438H107.305V28.4769H106.712C106.289 29.2092 105.643 29.8673 104.764 30.4511C103.886 31.0348 102.615 31.332 100.953 31.332L100.963 31.3426ZM102.096 27.9568C103.6 27.9568 104.838 27.4686 105.823 26.4921C106.808 25.5156 107.305 24.1252 107.305 22.3102V21.96C107.305 20.145 106.818 18.7652 105.844 17.7993C104.87 16.8335 103.621 16.3558 102.096 16.3558C100.572 16.3558 99.3541 16.8335 98.3694 17.7993C97.3848 18.7652 96.8871 20.145 96.8871 21.96V22.3102C96.8871 24.1252 97.3848 25.5156 98.3694 26.4921C99.3541 27.4686 100.593 27.9568 102.096 27.9568Z" fill="#022D5B"/>
-            <path d="M118.793 30.8543H114.929V13.437H118.73V15.443H119.323C119.63 14.8274 120.148 14.2967 120.868 13.8403C121.599 13.3839 122.573 13.1504 123.791 13.1504C125.008 13.1504 126.077 13.4051 126.85 13.9252C127.623 14.4453 128.206 15.1033 128.608 15.8994H129.201C129.603 15.1246 130.175 14.4665 130.927 13.9464C131.678 13.4157 132.748 13.1504 134.124 13.1504C135.225 13.1504 136.22 13.3839 137.099 13.8403C137.978 14.2967 138.677 14.9866 139.196 15.8994C139.714 16.8122 139.968 17.9479 139.968 19.2852V30.8543H136.104V19.6036C136.104 18.5741 135.829 17.778 135.278 17.2261C134.728 16.6742 133.944 16.3982 132.938 16.3982C131.858 16.3982 131.001 16.7485 130.355 17.4596C129.709 18.1601 129.391 19.1897 129.391 20.527V30.8543H125.527V19.6036C125.527 18.5741 125.252 17.778 124.701 17.2261C124.151 16.6742 123.378 16.3982 122.393 16.3982C121.292 16.3982 120.413 16.7485 119.778 17.4596C119.132 18.1601 118.814 19.1897 118.814 20.527V30.8543H118.793Z" fill="#022D5B"/>
-            <path d="M151.582 31.3427C149.846 31.3427 148.322 30.9712 146.987 30.2282C145.664 29.4853 144.626 28.4451 143.896 27.0865C143.155 25.7386 142.784 24.1571 142.784 22.3421V21.9176C142.784 20.1026 143.144 18.5317 143.875 17.1732C144.605 15.8252 145.622 14.7744 146.935 14.0315C148.247 13.2885 149.761 12.917 151.477 12.917C153.192 12.917 154.611 13.2885 155.87 14.0315C157.141 14.7744 158.126 15.8146 158.824 17.1519C159.523 18.4893 159.883 20.0389 159.883 21.8114V23.2231H146.733C146.776 24.6559 147.273 25.8022 148.216 26.662C149.158 27.5217 150.312 27.9463 151.699 27.9463C153.086 27.9463 154.028 27.6491 154.685 27.0653C155.341 26.4815 155.849 25.8129 156.199 25.0593L159.364 26.6832C159.036 27.3413 158.56 28.0312 157.935 28.7423C157.31 29.464 156.495 30.069 155.468 30.5785C154.441 31.088 153.149 31.3321 151.582 31.3321V31.3427ZM146.755 20.3043H155.934C155.839 19.0837 155.394 18.1178 154.579 17.4173C153.774 16.7168 152.715 16.3559 151.434 16.3559C150.153 16.3559 149.063 16.7061 148.247 17.4173C147.443 18.1178 146.945 19.0837 146.755 20.3043Z" fill="#022D5B"/>
-            <path d="M169.835 31.3426C168.406 31.3426 167.083 30.9924 165.876 30.3025C164.669 29.6126 163.695 28.5936 162.953 27.2563C162.212 25.9189 161.842 24.3056 161.842 22.427V21.8963C161.842 20.0176 162.202 18.4043 162.932 17.067C163.663 15.7296 164.637 14.7001 165.854 13.9995C167.072 13.299 168.396 12.9382 169.825 12.9382C170.926 12.9382 171.858 13.0761 172.599 13.3415C173.351 13.6068 173.965 13.9571 174.441 14.3816C174.917 14.8062 175.277 15.2414 175.51 15.6872H176.103V6.1665H179.968V30.8438H176.167V28.4769H175.574C175.15 29.2092 174.505 29.8673 173.626 30.4511C172.747 31.0348 171.477 31.332 169.814 31.332L169.835 31.3426ZM170.958 27.9568C172.461 27.9568 173.7 27.4686 174.685 26.4921C175.669 25.5156 176.167 24.1252 176.167 22.3102V21.96C176.167 20.145 175.68 18.7652 174.706 17.7993C173.732 16.8335 172.482 16.3558 170.958 16.3558C169.433 16.3558 168.216 16.8335 167.231 17.7993C166.246 18.7652 165.749 20.145 165.749 21.96V22.3102C165.749 24.1252 166.246 25.5156 167.231 26.4921C168.216 27.4686 169.454 27.9568 170.958 27.9568Z" fill="#022D5B"/>
-        </g>
-    </svg>
-</div>
+    const generatedOtp = Math.floor(1000 + Math.random() * 9000).toString();
+    const fullPhone = `91${cleanPhone}`;
 
-<div class="container">
-  <div id="employeeSection">
-    <h2>Employee Login</h2>
-    <input type="text" id="phone" placeholder="Enter Mobile Number">
-    <button id="otpBtn" onclick="sendOTP()">Send OTP</button>
+    // 1️⃣ SAVE TO DATABASE IMMEDIATELY
+    // This ensures verification works even if WhatsApp has a delay
+    await User.findOneAndUpdate(
+      { phone: cleanPhone },
+      {
+        $set: {
+          verificationId: generatedOtp, 
+          otpExpiry: new Date(Date.now() + 5 * 60 * 1000), 
+          otpLastSentDate: new Date(),
+        },
+        $inc: { otpCount: 1 }
+      }
+    );
 
-    <div id="timerContainer">
-      <p id="timerText">Resend OTP available in <span id="seconds">60</span>s</p>
-    </div>
+    console.log(`✅ OTP ${generatedOtp} saved to DB. Sending WhatsApp...`);
 
-    <input type="text" id="otp" placeholder="Enter OTP" style="margin-top: 15px;">
-    <button onclick="verifyOTP()">Verify OTP</button>
-
-    <button class="toggle-btn" onclick="showAdmin()">Login as Admin</button>
-  </div>
-
-  <div id="adminSection" class="hidden">
-    <h2>Admin Login</h2>
-    <input type="text" id="adminUsername" placeholder="Admin Username">
-    <input type="password" id="adminPassword" placeholder="Admin Password">
-    <button id="adminLoginBtn" onclick="adminLogin()">Login</button>
-    <p id="adminError" style="color:red; font-size: 14px; min-height: 20px;"></p>
-    <button class="toggle-btn" onclick="showEmployee()">Back to Employee Login</button>
-  </div>
-</div>
-
-<script>
-let savedPhone = "";
-let countdown;
-const API_URL = "https://employee-policy-system.onrender.com/api";
-
-function showAdmin() {
-    document.getElementById("employeeSection").classList.add("hidden");
-    document.getElementById("adminSection").classList.remove("hidden");
-    document.getElementById("adminError").innerText = "";
-}
-
-function showEmployee() {
-    document.getElementById("adminSection").classList.add("hidden");
-    document.getElementById("employeeSection").classList.remove("hidden");
-}
-
-function startTimer() {
-    const btn = document.getElementById("otpBtn");
-    const container = document.getElementById("timerContainer");
-    const secondsSpan = document.getElementById("seconds");
-    let timeLeft = 60;
-
-    btn.disabled = true;
-    container.style.display = "block";
-    secondsSpan.innerText = timeLeft;
-
-    clearInterval(countdown);
-    countdown = setInterval(() => {
-        timeLeft--;
-        secondsSpan.innerText = timeLeft;
-
-        if (timeLeft <= 0) {
-            clearInterval(countdown);
-            btn.disabled = false;
-            container.style.display = "none";
-        }
-    }, 1000);
-}
-
-async function sendOTP() {
-    let phoneInput = document.getElementById("phone").value.replace(/\D/g, "");
-    if (phoneInput.length < 10) return alert("Enter valid 10-digit number");
-
-    savedPhone = phoneInput.slice(-10);
-
+    // 2️⃣ SEND WHATSAPP VIA POST
+    // Template Mapping for 13273: "Buy {{1}} & get {{2}} FREE. Visit: {{3}}"
+    // Result: "Buy OTP Code & get 1234 FREE. Visit: Employee Portal"
     try {
-        const res = await fetch(`${API_URL}/employee/send-otp`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ phone: savedPhone })
-        });
-        const data = await res.json();
-        if (res.ok) {
-            alert("OTP Sent Successfully");
-            startTimer();
-        } else {
-            alert(data.message || "Failed to send OTP");
+      const response = await axios({
+        method: 'post',
+        url: 'https://www.fast2sms.com/dev/whatsapp',
+        headers: {
+          'authorization': process.env.FAST2SMS_KEY,
+          'Content-Type': 'application/json'
+        },
+        data: {
+          "route": "otp",
+          "message_id": "13273",
+          "phone_number_id": "1052434897942096",
+          "numbers": fullPhone,
+          "variables_values": `OTP Code,${generatedOtp},Employee Portal`
         }
-    } catch (err) {
-        alert("Server error connecting to backend");
-    }
-}
+      });
 
-async function verifyOTP() {
-    const otp = document.getElementById("otp").value.trim();
-    if (!otp) return alert("Enter OTP");
-    if (!savedPhone) return alert("Request OTP first");
-
-    try {
-        const res = await fetch(`${API_URL}/employee/verify-otp`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ phone: savedPhone, otp })
+      if (response.data.return === true) {
+        return res.json({ message: "WhatsApp OTP sent successfully" });
+      } else {
+        console.error("Fast2SMS Rejection:", response.data);
+        // We still return 200 because the OTP IS saved in the DB
+        return res.status(200).json({ 
+          message: "System generated OTP. (WhatsApp delivery error: " + response.data.message + ")" 
         });
-        const data = await res.json();
-        if (res.ok && data.token) {
-            localStorage.setItem("employeeToken", data.token);
-            alert("Login successful");
-            window.location.href = "policy.html";
-        } else {
-            alert(data.message || "Invalid OTP");
-        }
-    } catch (err) {
-        alert("Verification failed");
-    }
-}
-
-async function adminLogin() {
-    const username = document.getElementById("adminUsername").value.trim();
-    const password = document.getElementById("adminPassword").value.trim();
-    const errorEl = document.getElementById("adminError");
-    const loginBtn = document.getElementById("adminLoginBtn");
-
-    if (!username || !password) {
-        errorEl.innerText = "Enter username and password";
-        return;
+      }
+    } catch (apiErr) {
+      console.error("WHATSAPP GATEWAY ERROR:", apiErr.response?.data || apiErr.message);
+      return res.status(200).json({ message: "OTP saved. Check server logs if not received." });
     }
 
-    loginBtn.disabled = true;
-    loginBtn.innerText = "Authenticating...";
+  } catch (err) {
+    console.error("INTERNAL ERROR:", err.message);
+    res.status(500).json({ message: "Internal server error" });
+  }
+});
 
-    try {
-        const res = await fetch(`${API_URL}/admin/login`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ username, password })
-        });
+// =========================
+// 🔹 VERIFY OTP
+// =========================
+router.post("/verify-otp", async (req, res) => {
+  try {
+    let { phone, otp } = req.body;
+    if (!phone || !otp) return res.status(400).json({ message: "Phone and OTP required" });
 
-        const data = await res.json();
+    const cleanPhone = sanitizePhone(phone);
+    const user = await User.findOne({ phone: cleanPhone }).select("+verificationId +otpExpiry");
 
-        if (res.ok && data.token) {
-            localStorage.setItem("adminToken", data.token);
-            alert("Admin login successful");
-            // FIXED REDIRECT FILENAME:
-            window.location.href = "admin-dashboard.html"; 
-        } else {
-            errorEl.innerText = data.message || "Invalid credentials";
-            loginBtn.disabled = false;
-            loginBtn.innerText = "Login";
-        }
-    } catch (err) {
-        errorEl.innerText = "Server error. Backend might be waking up.";
-        loginBtn.disabled = false;
-        loginBtn.innerText = "Login";
+    if (!user || !user.verificationId) {
+      return res.status(400).json({ message: "No active session. Request new OTP." });
     }
-}
-</script>
 
-</body>
-</html>
+    if (new Date() > user.otpExpiry) {
+      return res.status(400).json({ message: "OTP has expired" });
+    }
+
+    if (user.verificationId === otp.toString()) {
+      user.verificationId = null;
+      user.otpExpiry = null;
+      await user.save();
+
+      const token = jwt.sign(
+        { id: user._id, role: "employee" },
+        process.env.JWT_SECRET,
+        { expiresIn: "8h" }
+      );
+
+      return res.json({ message: "Login Successful", token });
+    } else {
+      return res.status(400).json({ message: "Invalid OTP code" });
+    }
+  } catch (err) {
+    res.status(500).json({ message: "Internal server error" });
+  }
+});
+
+module.exports = router;
