--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Employee Policy System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,24 +15,9 @@
     .toggle-btn { background: transparent; color: #667eea; margin-top: 15px; font-size: 14px; border: none; cursor: pointer; text-decoration: underline; }
     .hidden { display: none; }
     
-    /* 🔹 CAPTCHA STYLE */
-    #captchaArea { 
-      background: #f0f4f8; 
-      padding: 15px; 
-      border-radius: 8px; 
-      margin: 15px 0; 
-      display: none; 
-      border: 1px dashed #667eea;
-    }
-    #captchaDisplay { 
-      font-size: 28px; 
-      font-weight: 900; 
-      letter-spacing: 8px; 
-      color: #4e54c8; 
-      user-select: none; 
-      font-family: 'Courier New', Courier, monospace;
-      margin-bottom: 10px;
-    }
+    /* CAPTCHA / SECURITY CODE STYLE */
+    #captchaArea { background: #f0f4f8; padding: 15px; border-radius: 8px; margin: 15px 0; display: none; border: 1px dashed #667eea; }
+    #captchaDisplay { font-size: 14px; font-weight: 900; letter-spacing: 2px; color: #4e54c8; user-select: none; font-family: 'Courier New', Courier, monospace; margin-bottom: 10px; }
     .captcha-label { font-size: 12px; color: #718096; margin-bottom: 5px; display: block; font-weight: bold; }
 
     #timerContainer { background: #f7fafc; padding: 8px; border-radius: 8px; margin: 10px 0; display: none; }
@@ -40,12 +25,24 @@
     #seconds { color: #e53e3e; }
 
     .logo-header { position: absolute; top: 20px; left: 20px; background: white; padding: 10px 15px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); z-index: 1000; }
-      .logo-header svg { width: 140px; height: auto; }
+    .logo-header svg { width: 140px; height: auto; }
+
+    /* TOAST MESSAGE STYLE */
+    #toast {
+      visibility: hidden; min-width: 250px; background-color: #333; color: #fff; text-align: center;
+      border-radius: 8px; padding: 16px; position: fixed; z-index: 1001; left: 50%; bottom: 30px;
+      transform: translateX(-50%); font-size: 14px;
+    }
+    #toast.show { visibility: visible; animation: fadein 0.5s, fadeout 0.5s 2.5s; }
+    @keyframes fadein { from {bottom: 0; opacity: 0;} to {bottom: 30px; opacity: 1;} }
+    @keyframes fadeout { from {bottom: 30px; opacity: 1;} to {bottom: 0; opacity: 0;} }
   </style>
 </head>
 <body>
 
-    <div class="logo-header">
+<div id="toast"></div>
+
+<div class="logo-header">
     <svg width="180" height="37" viewBox="0 0 180 37" fill="none" xmlns="http://www.w3.org/2000/svg">       
          <g>
             <path d="M0 15.2309V0.626219C0 0.275961 0.275278 0 0.624669 0H8.036C10.8841 0 13.1922 2.31383 13.1922 5.16896V15.2309C13.1922 15.5812 12.9169 15.8571 12.5675 15.8571H0.624669C0.275278 15.8571 0 15.5812 0 15.2309Z" fill="#B71530"/>
@@ -59,7 +56,7 @@
             <path d="M118.793 30.8543H114.929V13.437H118.73V15.443H119.323C119.63 14.8274 120.148 14.2967 120.868 13.8403C121.599 13.3839 122.573 13.1504 123.791 13.1504C125.008 13.1504 126.077 13.4051 126.85 13.9252C127.623 14.4453 128.206 15.1033 128.608 15.8994H129.201C129.603 15.1246 130.175 14.4665 130.927 13.9464C131.678 13.4157 132.748 13.1504 134.124 13.1504C135.225 13.1504 136.22 13.3839 137.099 13.8403C137.978 14.2967 138.677 14.9866 139.196 15.8994C139.714 16.8122 139.968 17.9479 139.968 19.2852V30.8543H136.104V19.6036C136.104 18.5741 135.829 17.778 135.278 17.2261C134.728 16.6742 133.944 16.3982 132.938 16.3982C131.858 16.3982 131.001 16.7485 130.355 17.4596C129.709 18.1601 129.391 19.1897 129.391 20.527V30.8543H125.527V19.6036C125.527 18.5741 125.252 17.778 124.701 17.2261C124.151 16.6742 123.378 16.3982 122.393 16.3982C121.292 16.3982 120.413 16.7485 119.778 17.4596C119.132 18.1601 118.814 19.1897 118.814 20.527V30.8543H118.793Z" fill="#022D5B"/>
             <path d="M151.582 31.3427C149.846 31.3427 148.322 30.9712 146.987 30.2282C145.664 29.4853 144.626 28.4451 143.896 27.0865C143.155 25.7386 142.784 24.1571 142.784 22.3421V21.9176C142.784 20.1026 143.144 18.5317 143.875 17.1732C144.605 15.8252 145.622 14.7744 146.935 14.0315C148.247 13.2885 149.761 12.917 151.477 12.917C153.192 12.917 154.611 13.2885 155.87 14.0315C157.141 14.7744 158.126 15.8146 158.824 17.1519C159.523 18.4893 159.883 20.0389 159.883 21.8114V23.2231H146.733C146.776 24.6559 147.273 25.8022 148.216 26.662C149.158 27.5217 150.312 27.9463 151.699 27.9463C153.086 27.9463 154.028 27.6491 154.685 27.0653C155.341 26.4815 155.849 25.8129 156.199 25.0593L159.364 26.6832C159.036 27.3413 158.56 28.0312 157.935 28.7423C157.31 29.464 156.495 30.069 155.468 30.5785C154.441 31.088 153.149 31.3321 151.582 31.3321V31.3427ZM146.755 20.3043H155.934C155.839 19.0837 155.394 18.1178 154.579 17.4173C153.774 16.7168 152.715 16.3559 151.434 16.3559C150.153 16.3559 149.063 16.7061 148.247 17.4173C147.443 18.1178 146.945 19.0837 146.755 20.3043Z" fill="#022D5B"/>
             <path d="M169.835 31.3426C168.406 31.3426 167.083 30.9924 165.876 30.3025C164.669 29.6126 163.695 28.5936 162.953 27.2563C162.212 25.9189 161.842 24.3056 161.842 22.427V21.8963C161.842 20.0176 162.202 18.4043 162.932 17.067C163.663 15.7296 164.637 14.7001 165.854 13.9995C167.072 13.299 168.396 12.9382 169.825 12.9382C170.926 12.9382 171.858 13.0761 172.599 13.3415C173.351 13.6068 173.965 13.9571 174.441 14.3816C174.917 14.8062 175.277 15.2414 175.51 15.6872H176.103V6.1665H179.968V30.8438H176.167V28.4769H175.574C175.15 29.2092 174.505 29.8673 173.626 30.4511C172.747 31.0348 171.477 31.332 169.814 31.332L169.835 31.3426ZM170.958 27.9568C172.461 27.9568 173.7 27.4686 174.685 26.4921C175.669 25.5156 176.167 24.1252 176.167 22.3102V21.96C176.167 20.145 175.68 18.7652 174.706 17.7993C173.732 16.8335 172.482 16.3558 170.958 16.3558C169.433 16.3558 168.216 16.8335 167.231 17.7993C166.246 18.7652 165.749 20.145 165.749 21.96V22.3102C165.749 24.1252 166.246 25.5156 167.231 26.4921C168.216 27.4686 169.454 27.9568 170.958 27.9568Z" fill="#022D5B"/>
-        </g>
+         </g>
     </svg>
 </div>
 
@@ -70,9 +67,9 @@
     <button id="otpBtn" onclick="sendOTP()">Send Verification Code</button>
 
     <div id="captchaArea">
-      <span class="captcha-label">ENTER CAPTCHA SHOWN BELOW</span>
+      <span class="captcha-label">ENTER SECURITY CODE SHOWN BELOW</span>
       <div id="captchaDisplay">----</div>
-      <input type="text" id="captchaInput" placeholder="Type Captcha Here">
+      <input type="text" id="captchaInput" placeholder="Type Security Code Here">
     </div>
 
     <div id="smsArea" class="hidden">
@@ -84,7 +81,6 @@
     </div>
 
     <button id="verifyBtn" class="hidden" onclick="verifyOTP()">Verify & Login</button>
-
     <button class="toggle-btn" onclick="showAdmin()">Login as Admin</button>
   </div>
 
@@ -102,6 +98,14 @@
 let savedPhone = "";
 let countdown;
 const API_URL = "https://employee-policy-system.onrender.com/api";
+
+function showToast(message, color = "#333") {
+    const toast = document.getElementById("toast");
+    toast.innerText = message;
+    toast.style.backgroundColor = color;
+    toast.className = "show";
+    setTimeout(() => { toast.className = toast.className.replace("show", ""); }, 3000);
+}
 
 function showAdmin() {
     document.getElementById("employeeSection").classList.add("hidden");
@@ -136,6 +140,10 @@ async function sendOTP() {
     if (phoneInput.length < 10) return alert("Enter 10-digit number");
     savedPhone = phoneInput.slice(-10);
 
+    const otpBtn = document.getElementById("otpBtn");
+    otpBtn.innerText = "Sending...";
+    otpBtn.disabled = true;
+
     try {
         const res = await fetch(`${API_URL}/employee/send-otp`, {
             method: "POST",
@@ -145,28 +153,34 @@ async function sendOTP() {
         const data = await res.json();
         
         if (res.ok) {
+            showToast(data.message, "#28a745"); // Shows "OTP sent successfully"
             document.getElementById("captchaArea").style.display = "block";
-            // Display the ID as the security code
             document.getElementById("captchaDisplay").innerText = data.displayCode;
-            document.getElementById("captchaDisplay").style.letterSpacing = "2px"; 
-            document.getElementById("captchaDisplay").style.fontSize = "14px"; 
-
             document.getElementById("smsArea").classList.remove("hidden");
             document.getElementById("verifyBtn").classList.remove("hidden");
+            otpBtn.innerText = "Send Verification Code";
             startTimer();
         } else {
             alert(data.message);
+            otpBtn.disabled = false;
+            otpBtn.innerText = "Send Verification Code";
         }
     } catch (err) {
-        alert("Server is waking up, please try again in 5 seconds.");
+        alert("Server is waking up, please try again.");
+        otpBtn.disabled = false;
+        otpBtn.innerText = "Send Verification Code";
     }
 }
 
 async function verifyOTP() {
     const smsOtp = document.getElementById("smsOtp").value.trim();
     const captchaInput = document.getElementById("captchaInput").value.trim();
+    const verifyBtn = document.getElementById("verifyBtn");
 
     if(!smsOtp || !captchaInput) return alert("Enter both codes");
+
+    verifyBtn.innerText = "Verifying...";
+    verifyBtn.disabled = true;
 
     try {
         const res = await fetch(`${API_URL}/employee/verify-otp`, {
@@ -175,20 +189,26 @@ async function verifyOTP() {
             body: JSON.stringify({ 
                 phone: savedPhone, 
                 otp: smsOtp, 
-                enteredId: captchaInput // Send the ID the user typed
+                enteredId: captchaInput 
             })
         });
         const data = await res.json();
         if (res.ok) {
+            showToast(data.message, "#28a745"); // Shows "Login Successful"
             localStorage.setItem("employeeToken", data.token);
-            window.location.href = "policy.html";
+            setTimeout(() => { window.location.href = "policy.html"; }, 1500);
         } else {
             alert(data.message || "Verification failed");
+            verifyBtn.innerText = "Verify & Login";
+            verifyBtn.disabled = false;
         }
     } catch (err) {
-        alert("System error. Check console.");
+        alert("System error.");
+        verifyBtn.innerText = "Verify & Login";
+        verifyBtn.disabled = false;
     }
 }
+
 async function adminLogin() {
     const username = document.getElementById("adminUsername").value.trim();
     const password = document.getElementById("adminPassword").value.trim();
